--- a/EasyGoOperation/bin/AndroidManifest.xml
+++ b/EasyGoOperation/bin/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="18"
+        android:minSdkVersion="11"
         android:targetSdkVersion="18" />
 
     <application
@@ -30,6 +30,9 @@
         </activity>
         <activity
             android:name="com.easygo.operation.WriteAnswerActi">
+        </activity>
+        <activity
+            android:name="com.easygo.operation.SelectAnswerActivity">
         </activity>
         
     </application>
